--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-icons": "^5.2.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
@@ -24,6 +25,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "json-server": "^1.0.0-beta.0",
+        "react-hot-toast": "^2.4.1",
         "vite": "^5.2.0"
     }
 }
