--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "scripts": {
         "dev": "vite",
         "js": "npx json-server -w mock/db.json --port 5174",
+        "start": "concurrently \"npm run dev\" \"npm run js\"",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
+        "concurrently": "^8.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1"
