--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "vite",
         "js": "npx json-server -w mock/db.json --port 5174",
         "start": "concurrently \"npm run dev\" \"npm run js\"",
-        "build": "vite build",
+        "build": "vite build  && cp -r dist docs",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
