--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "js": "npx json-server -w mock/db.json --port 5174",
+        "dev": "vite --port 3000",
+        "js": "npx json-server -w mock/db.json --port 3001",
         "start": "concurrently \"npm run dev\" \"npm run js\"",
-        "build": "vite build  && cp -r dist docs",
+        "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
